--- a/app/components/ui/main.css
+++ b/app/components/ui/main.css
@@ -46,22 +46,8 @@ body {
   opacity: 0.9;
 }
 
-#ui .title {
-  background-color: buttonface;
-  padding: 2px 0;
-}
-
-#ui .title:after {
-    font-family: 'Glyphicons Halflings'; 
-    content: "\e114";
-    float: right;
-    color: grey;
-    font-size: 12px;
-    margin: 5px 5px;
-}
-
-#ui .title.collapsed:after {
-    content: "\e080";    /* adjust as needed, taken from bootstrap.css */
+#ui .title, #ui p {
+  padding: 0 5px;
 }
 
 #ui .collapsed > a > .caret {
@@ -146,3 +132,37 @@ height: auto;
   background-color: white;
 }
 
+
+
+#ui .panel-group .panel {
+  border-radius: 0;
+  background-color: transparent;
+  border: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+#ui .panel-heading {
+  padding: 10px 5px;
+  border: 0;
+  border-radius: 0;
+  background-color: buttonface;
+  cursor: pointer;
+}
+
+#ui .panel-body {
+  padding: 15px 5px;
+}
+
+#ui .panel .panel-title a:after {
+    font-family: 'Glyphicons Halflings'; 
+    content: "\e114";
+    float: right;
+    color: grey;
+    font-size: 12px;
+    margin: 5px 5px;
+}
+
+#ui .panel.collapsed .panel-title a:after {
+    content: "\e080";    /* adjust as needed, taken from bootstrap.css */
+}
