--- a/app/components/ui/main.css
+++ b/app/components/ui/main.css
@@ -50,7 +50,7 @@ body {
   padding: 0 5px;
 }
 
-#ui .collapsed > a > .caret {
+#ui .collapsed > a > .caret, #ui a.collapsed > .caret, .caret.collapsed {
   border: 1px solid red;
   border-left: 4px solid;
   border-right: 4px solid transparent;
