--- a/app/components/ui/main.html
+++ b/app/components/ui/main.html
@@ -14,45 +14,45 @@
     <accordion close-others="false">
       <accordion-group heading="Filters" is-open="panelState.filters" ng-class="{'collapsed': !panelState.filters}">
 
-        <div class="">
-          <a href data-toggle="collapse" data-target="#pairsBox" >Ligand - Receptor Pairs <b class="caret"></b></a>
+        <div>
+          <a href ng-click="panelState.pairs = !panelState.pairs">Ligand - Receptor Pairs <b class="caret" ng-class="{'collapsed': !panelState.pairs}"></b></a>
           <div class="pull-right small">{{selected.pairs.length}} / <a href ng-click="selected.pairs = data.pairs">{{data.pairs.length}}</a> <a href ng-click="selected.pairs = []">(clear)</a></div>  
         </div>
-        <div id="pairsBox" class="fade in collapse">
+        <div collapse="!panelState.pairs">
           <select id="pairs" class="col-md-12" size="30" multiple chosen  display-selected-options="false" search-contains="true" ng-model="selected.pairs" ng-options="p.Ligand + '-' + p.Receptor for p in data.pairs track by p.id" data-placeholder="Select Ligand-Receptor pairs"></select>
         </div>
 
         <p />
-        <div class="collapsed">
-          <a href data-toggle="collapse" data-target="#cellsBox" >Samples <b class="caret"></b></a>
+        <div>
+          <a href ng-click="panelState.cells = !panelState.cells" >Samples <b class="caret" ng-class="{'collapsed': !panelState.cells}"></b></a>
           <div class="pull-right small">{{selected.cells.length}} / <a href ng-click="selected.cells = data.cells">{{data.cells.length}}</a> <a href ng-click="selected.cells = []">(clear)</a></div>
         </div>
-        <div id="cellsBox" class="fade out collapse" >
+        <div collapse="!panelState.cells">
           <select id="cells" class="col-md-12 form-control" size="30" multiple  chosen  display-selected-options="false" search-contains="true" ng-model="selected.cells" ng-options="c.name for c in data.cells track by c.id" data-placeholder="Select cell samples" style="width: 100%"></select>
         </div>
 
         <p />
-        <div class="collapsed" data-toggle="collapse" data-target="#ligandRange" >
-          <a href>Ligand min TPM  <b class="caret"></b></a>
+        <div ng-click="panelState.ligand = !panelState.ligand">
+          <a href>Ligand min TPM  <b class="caret" ng-class="{'collapsed': !panelState.cells}"></b></a>
           <div class="pull-right small"> > {{ligandRange.val | number:0}} tpm</div>
         </div>
-        <div slider id="ligandRange" class="fade out collapse" ng-model="ligandRange.val" max="ligandRange.max" min="1"></div>
+        <div slider collapse="!panelState.ligand" ng-model="ligandRange.val" max="ligandRange.max" min="1"></div>
 
         <p />
-        <div class="collapsed" data-toggle="collapse" data-target="#receptorRange" >
-          <a href>Receptor min TPM  <b class="caret"></b></a>
+        <div ng-click="panelState.receptor = !panelState.receptor">
+          <a href>Receptor min TPM  <b class="caret" ng-class="{'collapsed': !panelState.receptor}"></b></a>
           <div class="pull-right small"> > {{receptorRange.val | number:0}} tpm</div>
         </div>
-        <div slider id="receptorRange" class="fade out collapse" ng-model="receptorRange.val" max="receptorRange.max" min="1"></div>
+        <div slider collapse="!panelState.receptor" ng-model="receptorRange.val" max="receptorRange.max" min="1"></div>
 
 
       </accordion-group>
       <accordion-group heading="Options" is-open="panelState.options" ng-class="{'collapsed': !panelState.options}">
-        <div class="collapsed" data-toggle="collapse" data-target="#edges">
-          <a href>Maximum number of edges  <b class="caret"></b></a>
+        <div ng-click="panelState.edges = !panelState.edges">
+          <a href>Maximum number of edges  <b class="caret" ng-class="{'collapsed': !panelState.edges}"></b></a>
           <div class="pull-right small"> {{options.maxEdges | number:0}}</div>
         </div>
-        <div slider id="edges" class="fade out collapse" ng-model="options.maxEdges" max="1000" min="1"></div>
+        <div slider collapse="!panelState.edges" id="edges" ng-model="options.maxEdges" max="1000" min="1"></div>
 
         <p />
         <div>
