--- a/app/components/jordan_network/panel.html
+++ b/app/components/jordan_network/panel.html
@@ -5,7 +5,7 @@
 <p class="ng-cloak">
   Pairs: {{selected.pairs.length}} / {{data.pairs.length}}
   <br />Nodes: {{graph.nodes.length}} / {{data.cells.length}}
-  <br />Edges: {{graph.edges.length}} / {{edgeCount}} <span class="bg-danger" ng-show="edgeCount > options.maxEdges">Maximum shown</span></span>
+  <br />Edges: {{graph.edges.length}} / {{graph.edgeCount}} <span class="bg-danger" ng-show="graph.edgeCount > options.maxEdges">Maximum shown</span></span>
 </p>
 
 <accordion close-others="false">
@@ -27,13 +27,13 @@
     </div>
 
     <p />
-    <div panel heading="Ligand TPM" is-open="panelState.ligand" label="&gt; {{ligandRange.val}} tpm">
-      <div slider ng-model="ligandRange.val" max="ligandRange.max" min="0"></div>
+    <div panel heading="Ligand TPM" is-open="panelState.ligand" label="&gt; {{options.ligandFilter}} tpm">
+      <div slider ng-model="options.ligandFilter" max="graph.ligandExtent[1]" min="0"></div>
     </div>
 
     <p />
-    <div panel heading="Receptor TPM" is-open="panelState.receptor" label="&gt; {{receptorRange.val}} tpm">
-      <div slider ng-model="receptorRange.val" max="receptorRange.max" min="0"></div>
+    <div panel heading="Receptor TPM" is-open="panelState.receptor" label="&gt; {{options.receptorFilter}} tpm">
+      <div slider ng-model="options.receptorFilter" max="graph.receptorExtent[1]" min="0"></div>
     </div>
 
   </accordion-group>
