--- a/app/components/force/panel.html
+++ b/app/components/force/panel.html
@@ -9,21 +9,35 @@
 </p>
 
 <accordion close-others="false">
-  <accordion-group heading="Filters" is-open="panelState.filters" ng-class="{'collapsed': !panelState.filters}">
+
+  <accordion-group heading="Node Filters" is-open="panelState.nodeFilters" ng-class="{'collapsed': !panelState.nodeFilters}">
+
+    <div panel heading="Samples" is-open="panelState.cells">
+      <div panel-label>
+        {{selected.cells.length}} / <a href ng-click="selected.cells = data.cells; $event.stopPropagation();">{{data.cells.length}}</a> <a href ng-click="selected.cells = []; $event.stopPropagation();">(clear)</a>
+      </div>
+      <select id="cells" class="col-md-12 form-control" size="30" multiple  chosen  display-selected-options="false" search-contains="true" ng-model="selected.cells" ng-options="c.name for c in data.cells track by c.id" data-placeholder="Select cell samples" style="width: 100%"></select>
+    </div>
+
+    <p />
+    <div panel heading="Ligand rank" is-open="panelState.receptorRank" label="p = {{options.ligandRankFilter | number:2}}">
+      <div slider ng-model="options.ligandRankFilter" max="1" min="0" step="0.01"></div>
+    </div>
+    
+    <p />
+    <div panel heading="Receptor rank" is-open="panelState.ligandRank" label="p = {{options.receptorRankFilter | number:2}}">
+      <div slider ng-model="options.receptorRankFilter" max="1" min="0" step="0.01"></div>
+    </div>
+
+  </accordion-group>
+
+  <accordion-group heading="Edge Filters" is-open="panelState.edgeFilters" ng-class="{'collapsed': !panelState.edgeFilters}">
 
     <div panel heading="Ligand - Receptor Pairs" is-open="panelState.pairs">
       <div panel-label>
         {{selected.pairs.length}} / <a href ng-click="selected.pairs = data.pairs; $event.stopPropagation();">{{data.pairs.length}}</a> <a href ng-click="selected.pairs = []; $event.stopPropagation();">(clear)</a>
       </div>
       <select id="pairs" class="col-md-12" size="30" multiple chosen  display-selected-options="false" search-contains="true" ng-model="selected.pairs" ng-options="p.Ligand + '-' + p.Receptor for p in data.pairs track by p.id" data-placeholder="Select Ligand-Receptor pairs"></select>
-    </div>
-
-    <p />
-    <div panel heading="Samples" is-open="panelState.cells">
-      <div panel-label>
-        {{selected.cells.length}} / <a href ng-click="selected.cells = data.cells; $event.stopPropagation();">{{data.cells.length}}</a> <a href ng-click="selected.cells = []; $event.stopPropagation();">(clear)</a>
-      </div>
-      <select id="cells" class="col-md-12 form-control" size="30" multiple  chosen  display-selected-options="false" search-contains="true" ng-model="selected.cells" ng-options="c.name for c in data.cells track by c.id" data-placeholder="Select cell samples" style="width: 100%"></select>
     </div>
 
     <p />
@@ -37,29 +51,18 @@
     </div>
 
     <p />
-    <div panel heading="Ligand rank" is-open="panelState.receptorRank" label="p = {{options.ligandRankFilter | number:2}}">
-      <div slider ng-model="options.ligandRankFilter" max="1" min="0" step="0.01"></div>
-    </div>
-    
-    <p />
-    <div panel heading="Receptor rank" is-open="panelState.ligandRank" label="p = {{options.receptorRankFilter | number:2}}">
-      <div slider ng-model="options.receptorRankFilter" max="1" min="0" step="0.01"></div>
-    </div>
-
-
-
-  </accordion-group>
-  <accordion-group heading="Options" is-open="panelState.options" ng-class="{'collapsed': !panelState.options}">
-    <div panel heading="Maximum number of edges" label="{{options.maxEdges | number:0}}" is-open="panelState.edges" >
+    <div panel heading="Edge rank" label="{{options.maxEdges | number:0}}" is-open="panelState.edges" >
       <div slider ng-model="options.maxEdges" max="1000" min="1"></div>
-    </div>
+    </div>    
+  </accordion-group>
 
-    <p />
+  <accordion-group heading="Options" is-open="panelState.options" ng-class="{'collapsed': !panelState.options}">
     <div>
       Show node labels
       <div class="pull-right small"><input type="checkbox" ng-model="options.showLabels"></div>
     </div>
   </accordion-group>
+
   <accordion-group heading="Explanation" is-open="panelState.help" ng-class="{'collapsed': !panelState.help}">
     <ul>
       <li>Select Ligand - Receptor pair in the filter.
