--- a/app/components/ui/main.html
+++ b/app/components/ui/main.html
@@ -4,10 +4,14 @@
 </div>
 <div id="content" snap-content id="content" style="-webkit-transform: translate3d(350px, 0px, 0px);">
 
+
+
   <noscript>Missing javascript</noscript>
   <div id="vis">
     <svg></svg>
   </div>
+
+
 
   <div id="header" class="header row">
     <button type="button" snap-toggle class="navbar-toggle" title="Click to show stats and options">
@@ -20,6 +24,8 @@
     </div>
   </div>
 
+  <div growl></div>
+  
   <div id="footer" class="footer text-center">
     <p>Made and maintained by J. Harshbarger.</p>
   </div>
