--- a/app/components/hive/hive-legend.html
+++ b/app/components/hive/hive-legend.html
@@ -1,5 +1,7 @@
 <div id="legend">
+  <div class="rotate"> <div class="node ligand square"></div> Ligand</div>
+  <div class="rotate"> <div class="node receptor square"></div> Receptor</div>
   <div class="rotate"> <div class="node ligand"></div> Ligand expressing</div>
   <div class="rotate"> <div class="node receptor"></div> Receptor expressing</div>
-  <div class="rotate"> <div class="node both square"></div> Ligand-Receptor pair</div>
+  <div class="rotate"> <div class="node both"></div> Expressing both</div>
 </div>
