--- a/app/components/force/panel.html
+++ b/app/components/force/panel.html
@@ -14,10 +14,21 @@
 
     <div panel heading="Samples" is-open="panelState.cells">
       <div panel-label>
-        {{selected.cells.length}} / <a href ng-click="selected.cells = data.cells; $event.stopPropagation();">{{data.cells.length}}</a> <a href ng-click="selected.cells = []; $event.stopPropagation();">(clear)</a>
+        {{selected.cells.length}} / {{data.cells.length}}
       </div>
-      <select id="cells" class="col-md-12 form-control" size="30" multiple  chosen  display-selected-options="false" search-contains="true" ng-model="selected.cells" ng-options="c.name for c in data.cells track by c.id" data-placeholder="Select cell samples" style="width: 100%"></select>
+      <div
+            multi-select
+            input-model="data.cells"
+            output-model="selected.cells"
+            button-label="name"
+            item-label="name"
+            tick-property="ticked"
+            max-labels="1" >
+      </div>
+
     </div>
+
+
 
     <p />
     <div panel heading="Ligand cutoff" is-open="panelState.receptorRank" label="top {{options.ligandRankFilter | percentage}}" title="Showing only top {{options.ligandRankFilter | percentage}} of ligands">
@@ -34,10 +45,18 @@
   <accordion-group heading="Edge Filters" is-open="panelState.edgeFilters" ng-class="{'collapsed': !panelState.edgeFilters}">
 
     <div panel heading="Ligand - Receptor Pairs" is-open="panelState.pairs">
-      <div panel-label>
-        {{selected.pairs.length}} / <a href ng-click="selected.pairs = data.pairs; $event.stopPropagation();">{{data.pairs.length}}</a> <a href ng-click="selected.pairs = []; $event.stopPropagation();">(clear)</a>
+      <div panel-label class="ng-cloak">
+        {{selected.pairs.length}} / {{data.pairs.length}}
       </div>
-      <select id="pairs" class="col-md-12" size="30" multiple chosen  display-selected-options="false" search-contains="true" ng-model="selected.pairs" ng-options="p.Ligand + '-' + p.Receptor for p in data.pairs track by p.id" data-placeholder="Select Ligand-Receptor pairs"></select>
+      <div
+            multi-select
+            input-model="data.pairs"
+            output-model="selected.pairs"
+            button-label="name"
+            item-label="name"
+            tick-property="ticked"
+            max-labels="1" >
+      </div>
     </div>
 
     <p />
