--- a/app/components/ui/main.html
+++ b/app/components/ui/main.html
@@ -1,17 +1,16 @@
 
-<div snap-drawer id="ui">
-  <div ui-view="panel"></div>
+<div snap-drawers>
+  <div snap-drawer id="ui">
+    <div ui-view="panel"></div>
+  </div>
 </div>
+
 <div id="content" snap-content id="content" style="-webkit-transform: translate3d(350px, 0px, 0px);">
-
-
 
   <noscript>Missing javascript</noscript>
   <div id="vis">
     <svg></svg>
   </div>
-
-
 
   <div id="header" class="header row">
     <button type="button" snap-toggle class="navbar-toggle" title="Click to show stats and options">
@@ -31,7 +30,5 @@
   </div>
 
 </div>
-
-
 
 
