--- a/app/components/force/chart.css
+++ b/app/components/force/chart.css
@@ -5,7 +5,6 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  left: -300px;
   right: 0;
   width: 100%;
   height: 100%;
@@ -139,57 +138,11 @@ svg.hover .node.hover, svg.hover .node:hover {
   background: rgba(0, 0, 0, 0.8);
   color: #fff;
   border-radius: 2px;
-  pointer-events:none !imporatant;
+  pointer-events:none !important;
   z-index: 100;
-}
-
-/* Creates a small triangle extender for the tooltip */
-.d3-tip {
-  -webkit-transition: top 0.5s;
-  transition: top 0.5s;
-}
-
-.d3-tip:after {
-  box-sizing: border-box;
-  display: inline;
-  font-size: 10px;
-  width: 100%;
-  line-height: 1;
-  color: rgba(0, 0, 0, 0.8);
   position: absolute;
-  pointer-events: none;
-}
-
-/* Northward tooltips */
-.d3-tip.n:after {
-  content: "\25BC";
-  margin: -1px 0 0 0;
-  top: 100%;
-  left: 0;
-  text-align: center;
-}
-
-/* Eastward tooltips */
-.d3-tip.e:after {
-  content: "\25C0";
-  margin: -4px 0 0 0;
-  top: 50%;
-  left: -8px;
-}
-
-/* Southward tooltips */
-.d3-tip.s:after {
-  content: "\25B2";
-  margin: 0 0 1px 0;
-  top: -8px;
-  left: 0;
-  text-align: center;
-}
-
-/* Westward tooltips */
-.d3-tip.w:after {
-  content: "\25B6";
-  margin: -4px 0 0 -1px;
-  top: 50%;
-  left: 100%;
+  top: 40px !important;
+  right: 20px !important;
+  width: 400px !important;
+  left: auto !important;
 }
